# SocialGaming

./: BoostREADME.md  CMakeLists.txt  README.md  webchat.html
configs/games/: argument_test.json  for_each_test.json  getter_test.json  inparallel_test.json  loop_switch_test.json  parallelfor_test.json  rock_paper_scissors.json  setup_test.json  shuffle_sort_test.json  timers_test.json
configs/server/: from_build_folder.json  from_root_folder.json  ruleTestConfig.json
lib/: CMakeLists.txt
lib/GameSession/include/: GameSession.h
lib/Gamespec/: Gamespec.cpp
lib/Gamespec/include/: Gamespec.h
lib/antlr/: CMakeLists.txt  README  SimpleBoolean.g4  evaluator.cpp  example.txt  example2.txt
lib/networking/include/: Client.h  Server.h
lib/networking/src/: Client.cpp  Server.cpp
lib/translator/: CMakeLists.txt  translator.cpp  variables.cpp
lib/translator/include/: translator.h  variables.h
test/: CMakeLists.txt  exampleText.cpp
tools/: CMakeLists.txt
tools/gameclient/: CMakeLists.txt  ChatWindow.cpp  gameclient.cpp
tools/gameserver/: CMakeLists.txt  gameserver.cpp
tools/jsonEx/: CMakeLists.txt  jsonRet.cpp
tools/minesweeper/: a.out  minesweeper.cpp
